--- a/index.html
+++ b/index.html
@@ -1,317 +1,345 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="VIT event registration , here you can register for all VIT events"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="images/logo.png" type="image/logo.png " />
-    <title>VITeve</title>
-  </head>
 
-  <body>
-    <div class="body-div">
-      <header class="head">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="VIT event registration , here you can register for all VIT events" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="shortcut icon" href="images/logo.png" type="image/logo.png " />
+  <title>VITeve</title>
+</head>
+
+<body>
+  <div class="body-div">
+    <header class="head">
+      <div>
+        <a href="#home"><img src="images/logo.png" alt="VITeve logo" width="120px" height="36.46px"
+            title="Click to refresh" /></a>
+        <h1><strong>VITeve - Vit event registration</strong></h1>
+        <h2>VITeve</h2>
+      </div>
+      <nav class="nav">
+        <ul class="navigator">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#events">Events</a></li>
+          <li><a href="#registration">Registration</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li>
+            <a href="https://vit.ac.in/about-vit" target="_blank">About VIT</a>
+          </li>
+          <li id="hide">
+            <a href="mailto:vikeshkapoor100@gmail.com?
+              &subject=Reporting issue in VITeve &body=Elaborate issue properly - ">Raise query</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main class="home-box">
+      <div id="home"></div>
+      <marquee direction="left">"Welcome to VIT Event Registration. Let the Fun Begin!"</marquee>
+    </main>
+
+    <div class="event-box" id="events">
+      <aside>
         <div>
-          <a href="#home"
-            ><img
-              src="images/logo.png"
-              alt="VITeve logo"
-              width="140px"
-              height="46.46px" title="Click to refresh"
-          /></a>
-          <h1><strong>VITeve - Vit event registration</strong></h1>
-          <h2>VITeve</h2>
-        </div>
-        <nav class="nav">
           <ul class="navigator">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#events">Events</a></li>
-            <li><a href="#registration">Registration</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li>
-              <a href="https://vit.ac.in/about-vit" target="_blank"
-                >About VIT</a
-              >
-            </li>
-            <li>
-              <input
-                type="search"
-                name=""
-                id="search"
-                placeholder="What are you looking for?"
-              />
-            </li>
+            <li><a href="#gravitas">Gravitas</a></li>
+            <li><a href="#rivera">Rivera</a></li>
+            <li><a href="#general">General</a></li>
+            <li><a href="#tournament">Tournament</a></li>
+            <li><a href="#sports">Sports</a></li>
+            <!-- <li><a href="#club_event">Club event</a></li> -->
           </ul>
-        </nav>
-      </header>
-      <main class="home-box" >
-        <div id="home"></div>
-        <marquee direction="left"
-          >"Welcome to VIT Event Registration. Let the Fun Begin!"</marquee
-        >
-      </main>
-
-      <div class="event-box" id="events">
-        <aside>
-          <div>
-            <ul class="navigator">
-              <li><a href="#gravitas">Gravitas</a></li>
-              <li><a href="#rivera">Rivera</a></li>
-              <li><a href="#general">General</a></li>
-              <li><a href="#tournament">Tournament</a></li>
-              <li><a href="#sports">Sports</a></li>
-              <li><a href="#club_event">Club event</a></li>
-            </ul>
-          </div>
-        </aside>
-        <section class="event-section">
-          <div class="event-head">
-            <h2>Events</h2>
-          </div>
-          <div class="event-container" id="gravitas">
-            <h2>Gravitas</h2>
-            <div class="card-box">
+        </div>
+      </aside>
+      <section class="event-section">
+        <div class="event-head">
+          <h2>Events</h2>
+        </div>
+        <div class="event-container" id="gravitas">
+          <h2>Gravitas</h2>
+          <div class="card-box">
+            <a href="#registration">
               <div class="card">
                 <h3>Hexathon</h3>
                 <div>₹100</div>
                 <div>16th Sep</div>
               </div>
+            </a>
+            <a href="#registration">
               <div class="card">
                 <h3>Hack Battle</h3>
                 <div>₹100</div>
-                <div>16th Sep</div>
+                <div>18th Sep</div>
               </div>
+            </a>
+            <a href="#registration">
               <div class="card">
                 <h3>Pygame</h3>
                 <div>₹250</div>
-                <div>16th Sep</div>
+                <div>20th Sep</div>
               </div>
+            </a>
+            <a href="#registration">
               <div class="card">
                 <h3>ForkThis</h3>
                 <div>₹200</div>
-                <div>16th Sep</div>
+                <div>24th Sep</div>
               </div>
+            </a>
+            <a href="#registration">
               <div class="card">
                 <h3>Robowars</h3>
                 <div>₹400</div>
-                <div>16th Sep</div>
+                <div>26th Sep</div>
               </div>
-            </div>
+            </a>
           </div>
-          <div class="event-container" id="rivera">
-            <h2>Rivera</h2>
-            <div class="card-box">
+        </div>
+        <div class="event-container" id="rivera">
+          <h2>Rivera</h2>
+          <div class="card-box">
+            <a href="#registration">
               <div class="card">
                 <h3>Rivera 1st day</h3>
                 <div>₹1000</div>
                 <div>10th Jan</div>
               </div>
+            </a>
+            <a href="#registration">
               <div class="card">
                 <h3>Rivera 2nd day</h3>
                 <div>₹1000</div>
                 <div>11th Jan</div>
               </div>
+            </a>
+            <a href="#registration">
               <div class="card">
                 <h3>Rivera 3rd day</h3>
                 <div>₹1500</div>
                 <div>12th Jan</div>
               </div>
+            </a>
+            <a href="#registration">
               <div class="card">
                 <h3>Night party</h3>
                 <div>₹200</div>
                 <div>16th Sep</div>
               </div>
+            </a>
+            <a href="#registration">
               <div class="card">
                 <h3>Singing Show</h3>
                 <div>₹400</div>
                 <div>16th Sep</div>
               </div>
-            </div>
+            </a>
           </div>
-          <div class="event-container" id="general">
-            <h2>General</h2>
-            <div class="card-box">
+        </div>
+        <div class="event-container" id="general">
+          <h2>General</h2>
+          <div class="card-box">
+            <a href="#registration">
               <div class="card">
                 <h3>Diwali celebration</h3>
                 <div>Free</div>
                 <div>12th Nov</div>
               </div>
+            </a>
+            <a href="#registration">
               <div class="card">
                 <h3>Holi celebration</h3>
                 <div>Free</div>
                 <div>25th Mar</div>
               </div>
+            </a>
+            <a href="#registration">
               <div class="card">
                 <h3>Pongal celebration</h3>
                 <div>Free</div>
                 <div>12th Oct</div>
               </div>
+            </a>
+            <a href="#registration">
               <div class="card">
                 <h3>Match screening</h3>
                 <div>Free</div>
                 <div>30th Nov</div>
               </div>
-            </div>
+            </a>
           </div>
-          <div class="event-container" id="tournament">
-            <h2>Tournament</h2>
-            <div class="card-box">
+        </div>
+        <div class="event-container" id="tournament">
+          <h2>Tournament</h2>
+          <div class="card-box">
+            <a href="#registration">
               <div class="card">
                 <h3>Cricket</h3>
                 <div>₹100</div>
                 <div>19th Sep</div>
               </div>
+            </a>
+            <a href="#registration">
               <div class="card">
                 <h3>Football</h3>
                 <div>₹100</div>
                 <div>24th Sep</div>
               </div>
+            </a>
+            <a href="#registration">
               <div class="card">
                 <h3>Volleyball</h3>
                 <div>₹250</div>
                 <div>28th Sep</div>
               </div>
+            </a>
+            <a href="#registration">
               <div class="card">
                 <h3>Kabaddi</h3>
                 <div>₹200</div>
                 <div>30th Sep</div>
               </div>
+            </a>
+            <a href="#registration">
               <div class="card">
                 <h3>Chess</h3>
                 <div>₹400</div>
                 <div>6th Oct</div>
               </div>
-            </div>
+            </a>
           </div>
-          <div class="event-container" id="sports">
-            <h2>Sports</h2>
-            <div class="card-box">
+        </div>
+        <div class="event-container" id="sports">
+          <h2>Sports</h2>
+          <div class="card-box">
+            <a href="#registration">
               <div class="card">
                 <h3>Cricket match</h3>
                 <div>₹50</div>
-                <div>16th Sep</div>
+                <div>4th Dec</div>
               </div>
+            </a>
+            <a href="#registration">
               <div class="card">
                 <h3>Football match</h3>
                 <div>₹50</div>
-                <div>16th Sep</div>
+                <div>6th Dec</div>
               </div>
+            </a>
+            <a href="#registration">
               <div class="card">
                 <h3>Volleyball match</h3>
                 <div>₹50</div>
-                <div>16th Sep</div>
+                <div>12th Dec</div>
               </div>
+            </a>
+            <a href="#registration">
               <div class="card">
                 <h3>Kabaddi match</h3>
                 <div>₹50</div>
-                <div>16th Sep</div>
+                <div>16th Dec</div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <div class="registration-outer-box" id="registration">
+      <section class="registration-inner-box">
+        <div class="registration-top">
+          <img src="images/logo.png" alt="" />
+          <span>
+            <h2>Registration form</h2>
+            <span>Here you can register for all events</span>
+          </span>
+        </div>
+        <div class="registration-main">
+          <form onsubmit="return check()">
+            <div class="form-flex">
+              <div>
+                <label for="name" class="form-label">Full name <span style="color: red">*</span></label>
+                <input class="form-input" type="text" name="name" id="name"/>
+                <div class="error" id="e1"></div>
+              </div>
+              <div>
+                <label for="regno" class="form-label">Register No <span style="color: red">*</span></label>
+                <input class="form-input" type="text" name="regno" id="regno"/>
+                <div class="error" id="e2"></div>
+              </div>
+
+              <div>
+                <label for="email" class="form-label">VIT Email id <span style="color: red">*</span></label>
+                <input class="form-input" type="email" name="email" id="email"/>
+                <div class="error" id="e3"></div>
+              </div>
+              <div>
+                <label for="gender" class="form-label">Gender <span style="color: red">*</span></label>
+                <select class="form-input" name="gender" id="gender">
+                  <option value="">--Please select--</option>
+                  <option value="male">Male</option>
+                  <option value="female">Female</option>
+                  <option value="other">Other</option>
+                </select>
+                <div class="error" id="e4"></div>
+              </div>
+
+              <div>
+                <label for="category" class="form-label">Category <span style="color: red">*</span></label>
+                <select class="form-input" name="category" id="category">
+                  <option value="" selected>--Select event category--</option>
+                  <option value="gravitas">Gravitas</option>
+                  <option value="rivera">Rivera</option>
+                  <option value="general">General</option>
+                  <option value="tournament">Tournament</option>
+                  <option value="sports">Sports</option>
+                  <!-- <option value="club event">Club event</option> -->
+                </select>
+                <div class="error" id="e5"></div>
+              </div>
+              <div>
+                <label for="event" class="form-label">Event name <span style="color: red">*</span></label>
+                <select class="form-input" name="event" id="event">
+                  <option value="" selected>--Select event--</option>
+                  <option value=""></option>
+                </select>
+                <div class="error" id="e6"></div>
               </div>
             </div>
-          </div>
-        </section>
-      </div>
-
-      <div class="registration-outer-box" id="registration">
-        <section class="registration-inner-box">
-          <div class="registration-top">
-            <img src="images/logo.png" alt="" />
-            <span>
-              <h2>Registration form</h2>
-              <span>Here you can register for all events</span>
-            </span>
-          </div>
-          <div class="registration-main">
-            <form action="">
-              <div class="form-flex">
-                <div class="form-flex">
-                  <span>
-                    <label for="name">Full name</label>
-                    <input type="text" name="" id="name" />
-                  </span>
-                  <span>
-                    <label for="regno">Register No</label>
-                    <input type="text" name="" id="regno" />
-                  </span>
-                </div>
-                <div class="form-flex">
-                  <span>
-                    <label for="email">Email id</label>
-                    <input type="email" name="" id="email" />
-                  </span>
-                  <span>
-                    <label for="gender">Gender</label>
-                    <select name="" id="gender">
-                      <option value="">--Please select--</option>
-                      <option value="male">Male</option>
-                      <option value="female">Female</option>
-                      <option value="other">Other</option>
-                    </select>
-                  </span>
-                </div>
-                <div class="form-flex">
-                  <span>
-                    <label for="category">Category</label>
-                    <select name="" id="category">
-                      <option value="" selected>
-                        --Select event category--
-                      </option>
-                      <option value="gravitas">Gravitas</option>
-                      <option value="rivera">Rivera</option>
-                      <option value="general">General</option>
-                      <option value="tournament">Tournament</option>
-                      <option value="supports">Supports</option>
-                      <option value="club event">Club event</option>
-                    </select>
-                  </span>
-                  <span>
-                    <label for="event">Event name</label>
-                    <select name="" id="event">
-                      <option value="" selected>--Select event--</option>
-                      <option value=""></option>
-                    </select>
-                  </span>
-                </div>
-              </div>
-              <div class="button">
-                <input type="submit" value="Submit" />
-              </div>
-            </form>
-          </div>
-        </section>
-      </div>
-
-      <footer class="footer-box" id="contact">
-        <span class="footer-content">Contact Us</span>
-        <div class="footer-icon">
-          <a href="https://www.instagram.com/vikesh_kapoor_vk/" target="_blank"
-            ><img src="images/instagram.png" alt="instagram logo"
-          /></a>
-          <span>/</span>
-          <a href="https://www.linkedin.com/in/vikesh-kumar-vk" target="_blank"
-            ><img src="images/linkedin.png" alt="linkedin logo"
-          /></a>
-          <span>/</span>
-          <a href="mailto:vikeshkapoor100@gmail.com"
-            ><img src="images/social.png" alt="mail logo"
-          /></a>
-          <span>/</span>
-          <a href="https://twitter.com/Vikeshkapoorvk" target="_blank"
-            ><img src="images/twitter.png" alt="twitter logo"
-          /></a>
-          <span>/</span>
-          <a href="https://www.facebook.com/vikeshkapoorvk" target="_blank"
-            ><img src="images/facebook.png" alt="facebook logo"
-          /></a>
+            <div>
+              <input class="button" type="submit" value="Submit" />
+            </div>
+            <div class="info">
+              <span style="color: red">*</span> marked sections are mandatory
+            </div>
+          </form>
         </div>
-        <div class="footer-logo">
-          <span><a href="#home">VITeve</a></span>
-        </div>
-      </footer>
-      <script src="script.js"></script>
+      </section>
     </div>
-  </body>
+
+    <footer class="footer-box" id="contact">
+      <span class="footer-content">Contact Us</span>
+      <div class="footer-icon">
+        <a href="https://www.instagram.com/vikesh_kapoor_vk/" target="_blank"><img src="images/instagram.png"
+            alt="instagram logo" /></a>
+        <span>/</span>
+        <a href="https://www.linkedin.com/in/vikesh-kumar-vk" target="_blank"><img src="images/linkedin.png"
+            alt="linkedin logo" /></a>
+        <span>/</span>
+        <a href="mailto:vikeshkapoor100@gmail.com"><img src="images/social.png" alt="mail logo" /></a>
+        <span>/</span>
+        <a href="https://twitter.com/Vikeshkapoorvk" target="_blank"><img src="images/twitter.png"
+            alt="twitter logo" /></a>
+        <span>/</span>
+        <a href="https://www.facebook.com/vikeshkapoorvk" target="_blank"><img src="images/facebook.png"
+            alt="facebook logo" /></a>
+      </div>
+      <div class="footer-logo">
+        <span><a href="#home">VITeve</a></span>
+      </div>
+    </footer>
+  </div>
+  <script src="script.js"></script>
+</body>
 </html>
