--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="VIT event registration , here you can register for all VIT events" />
+  <meta name="google-site-verification" content="RGIsXEzmQVLGxSJX73Fflap8BNYz7l6tE-UGxmU_rN0" />
   <link rel="stylesheet" href="style.css" />
   <link rel="shortcut icon" href="images/logo.png" type="image/logo.png " />
   <title>VITeve</title>
